--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "Node",
   "version": "1.0.0",
@@ -8,8 +7,8 @@
   "private": true,
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
-    "fetch": "^1.1.0",
-    "natural": "^0.6.1",
-    "x-ray": "^2.3.2"
+    "node-fetch": "^2.3.0",
+    "sequelize": "^4.43.0",
+    "sqlite3": "^4.0.6"
   }
 }
