--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
-  "name": "Node",
+  "name": "webscraper",
   "version": "1.0.0",
-  "main": "scrape.js",
+  "engines": {
+    "node": ">=10"
+  },
+  "main": "index.js",
   "author": "nl253",
   "license": "MIT",
-  "private": true,
+  "scripts": {
+    "start": "node index.js",
+    "run": "npm run start"
+  },
+  "private": false,
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
     "node-fetch": "^2.3.0",
