Change proj name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webscraper",
+  "name": "simple-webscraper",
   "description": "Web scraping toolkit",
   "homepage": "https://github.com/nl253/WebScraper/blob/master/README.md",
   "version": "1.0.0",
