--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "files": [
     "example.js",
     "spider.js",
-    "db.js"
+    "exporting/sqlite.js"
   ],
   "main": "index.js",
   "keywords": [
@@ -14,7 +14,7 @@
     "spider",
     "scraper"
   ],
-  "version": "1.1.1",
+  "version": "1.2.1",
   "readme": "",
   "engines": {
     "node": ">=10"
