--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
   "files": [
     "example.js",
     "spider.js",
+    "exporting/index.js",
     "exporting/sqlite.js"
   ],
   "private": false,
