--- a/package.json
+++ b/package.json
@@ -77,7 +77,9 @@
   "scripts": {
     "example": "node example.js",
     "test": "npx jest",
-    "doc": "echo -e 'PUBLISHING DOCS\\n' && rm -rf out docs && npx jsdoc -R README.md Column.js DataFrame.js opts.js presets.js && mv out docs && git add ./docs && git commit -am 'Update docs' -n && npm version patch && git push",
+    "doc": "echo -e 'GENERATING DOCS\\n'; rm -rf ./docs; npx jsdoc -d ./docs -R ./README.md ./*.js",
+    "doc:publish": "echo -e 'PUBLISHING DOCS\\n'; npm run doc; git add ./docs; git commit -am 'Update docs' -n; npm version patch; git push",
+    "doc:open": "npm run doc; $BROWSER ./docs/index.html",
     "loc": "tokei -- $(git ls-files | grep -E '\\.js$' | grep -v docs | grep -v bin)",
     "lint": "npx eslint *.js",
     "prepublishOnly": "npm run doc"
