Add doc generation for exporting module

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-webscraper",
-  "version": "1.5.2",
+  "version": "1.5.0",
   "description": "Web scraping toolkit",
   "readme": "https://github.com/nl253/WebScraper/blob/master/README.md",
   "homepage": "https://github.com/nl253/WebScraper/blob/master/README.md",
@@ -78,7 +78,7 @@
     "example": "node examples/jobsite.js",
     "example-2": "node examples/gh.js",
     "test": "npx jest",
-    "doc": "echo -e 'GENERATING DOCS\\n'; rm -rf ./docs; npx jsdoc -d ./docs -R ./README.md ./*.js",
+    "doc": "echo -e 'GENERATING DOCS\\n'; rm -rf ./docs; npx jsdoc -d ./docs -R ./README.md ./*.js ./exporting/*.js",
     "doc:publish": "echo -e 'PUBLISHING DOCS\\n'; npm run doc; git add ./docs; git commit -am 'Update docs' -n; npm version patch; git push",
     "doc:open": "npm run doc; $BROWSER ./docs/index.html",
     "loc": "tokei -- $(git ls-files | grep -E '\\.js$' | grep -v docs | grep -v bin)",
