--- a/package.json
+++ b/package.json
@@ -83,6 +83,6 @@
     "doc:open": "npm run doc; $BROWSER ./docs/index.html",
     "loc": "tokei -- $(git ls-files | grep -E '\\.js$' | grep -v docs | grep -v bin)",
     "lint": "npx eslint *.js",
-    "prepublishOnly": "npm run doc; npm run doc:publish"
+    "prepublishOnly": "npm run doc:publish"
   }
 }
