--- a/package.json
+++ b/package.json
@@ -60,8 +60,18 @@
     "eslint-plugin-security": "^1.4.0",
     "jest": "^24.9.0",
     "jsdoc": "3.6.3",
+    "jsonlint": "^1.6.3",
     "license-checker": "^25.0.1",
-    "retire": "^2.0.3"
+    "markdownlint": "^0.17.2",
+    "markdownlint-cli": "^0.19.0",
+    "remark": "^11.0.2",
+    "remark-cli": "^7.0.1",
+    "remark-lint": "^6.0.5",
+    "remark-preset-lint-consistent": "^2.0.3",
+    "remark-preset-lint-markdown-style-guide": "^2.1.3",
+    "remark-preset-lint-recommended": "^3.0.3",
+    "retire": "^2.0.3",
+    "write-good": "^1.0.2"
   },
   "main": "./index.js",
   "directories": {
@@ -73,6 +83,13 @@
     "*.js",
     "exporting/*.js"
   ],
+  "remarkConfig": {
+    "plugins": [
+      "remark-preset-lint-recommended",
+      "remark-preset-lint-markdown-style-guide",
+      "remark-preset-lint-consistent"
+    ]
+  },
   "private": false,
   "scripts": {
     "example": "node examples/jobsite.js",
