--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,6 @@
     "worker": true
   },
   "extends": [
-    "eslint:all",
     "eslint:recommended",
     "plugin:node/recommended",
     "plugin:security/recommended",
@@ -36,9 +35,9 @@
   "parserOptions": {
     "codeFrame": false,
     "ecmaFeatures": {
-      "spread": true,
       "impliedStrict": true,
-      "jsx": true
+      "jsx": true,
+      "spread": true
     },
     "ecmaVersion": 8,
     "sourceType": "module"
@@ -53,13 +52,7 @@
   ],
   "root": true,
   "rules": {
-    "security/detect-object-injection": "off",
-    "node/shebang": "off",
-    "promise/param-names": 1,
     "accessor-pairs": 0,
-    "indent": 1,
-    "comma-dangle": 0,
-    "array-bracket-spacing": 1,
     "array-bracket-newline": [
       1,
       {
@@ -67,7 +60,7 @@
         "multiline": true
       }
     ],
-    "no-confusing-arrow": 0,
+    "array-bracket-spacing": 1,
     "array-callback-return": 1,
     "array-element-newline": [
       1,
@@ -84,11 +77,11 @@
       }
     ],
     "block-scoped-var": 1,
-    "newline-per-chained-call": 0,
     "callback-return": 1,
     "camelcase": 1,
     "capitalized-comments": 0,
     "class-methods-use-this": 1,
+    "comma-dangle": 0,
     "complexity": [
       1,
       5
@@ -108,10 +101,12 @@
     "dot-notation": 1,
     "eol-last": 2,
     "filenames/match-exported": 1,
+    "filenames/match-regex": 0,
     "filenames/no-index": 0,
     "for-direction": 2,
     "func-name-matching": 1,
     "func-names": 0,
+    "function-call-argument-newline": 0,
     "generator-star-spacing": [
       1,
       {
@@ -126,7 +121,10 @@
       2,
       "^(err|error)$"
     ],
+    "implicit-arrow-linebreak": 1,
+    "indent": 1,
     "init-declarations": 0,
+    "linebreak-style": 0,
     "lines-around-comment": [
       1,
       {
@@ -142,6 +140,7 @@
       1,
       3
     ],
+    "max-len": 0,
     "max-lines": [
       1,
       120
@@ -158,10 +157,16 @@
       1,
       300
     ],
-    "max-statements-per-line": [2, {"max":  3}],
+    "max-statements-per-line": [
+      2,
+      {
+        "max": 3
+      }
+    ],
     "multiline-comment-style": 1,
-    "multiline-ternary": "off",
+    "multiline-ternary": 0,
     "new-parens": 2,
+    "newline-per-chained-call": 0,
     "no-alert": 1,
     "no-await-in-loop": 1,
     "no-bitwise": 1,
@@ -171,6 +176,7 @@
     "no-class-assign": 2,
     "no-compare-neg-zero": 2,
     "no-cond-assign": 2,
+    "no-confusing-arrow": 0,
     "no-console": 0,
     "no-const-assign": 2,
     "no-constant-condition": [
@@ -192,19 +198,14 @@
     "no-empty": 2,
     "no-empty-character-class": 2,
     "no-empty-function": 2,
-    "function-call-argument-newline": 0,
     "no-empty-pattern": 2,
     "no-eq-null": 1,
     "no-eval": "warn",
-    "radix": "off",
     "no-ex-assign": 2,
     "no-extend-native": 2,
     "no-extra-bind": 2,
     "no-extra-boolean-cast": 2,
     "no-extra-label": 2,
-    "object-curly-spacing": 1,
-    "implicit-arrow-linebreak": 1,
-    "linebreak-style": 0,
     "no-extra-parens": [
       1,
       "functions"
@@ -262,11 +263,19 @@
         "ignoreArrayIndexes": true
       }
     ],
-    "no-mixed-requires": 1,
     "no-mixed-operators": 0,
-    "filenames/match-regex": 0,
+    "no-mixed-requires": 1,
     "no-mixed-spaces-and-tabs": 2,
-    "no-multi-spaces": [1, {"exceptions": { "VariableDeclarator": true, "ImportDeclaration": true, "Property": true  }}],
+    "no-multi-spaces": [
+      1,
+      {
+        "exceptions": {
+          "ImportDeclaration": true,
+          "Property": true,
+          "VariableDeclarator": true
+        }
+      }
+    ],
     "no-multi-str": 2,
     "no-negated-condition": 0,
     "no-negated-in-lhs": 2,
@@ -309,9 +318,11 @@
     "no-shadow": [
       2,
       {
+        "allow": [
+          "_"
+        ],
         "builtinGlobals": false,
-        "hoist": "functions",
-        "allow": ["_"]
+        "hoist": "functions"
       }
     ],
     "no-shadow-restricted-names": 2,
@@ -324,7 +335,7 @@
     ],
     "no-tabs": 2,
     "no-template-curly-in-string": 2,
-    "no-ternary": "off",
+    "no-ternary": 0,
     "no-this-before-super": 2,
     "no-throw-literal": 2,
     "no-undef-init": 2,
@@ -370,27 +381,41 @@
     "no-void": 2,
     "no-warning-comments": 0,
     "no-with": 2,
+    "node/shebang": 0,
     "object-curly-newline": 0,
+    "object-curly-spacing": 1,
     "object-property-newline": [
       2,
       {
         "allowMultiplePropertiesPerLine": true
       }
     ],
-    "max-len": "off",
     "one-var-declaration-per-line": 1,
     "operator-assignment": 1,
     "optimize-regex/optimize-regex": 1,
+    "padded-blocks": [
+      1,
+      {
+        "classes": "never",
+        "switches": "never"
+      }
+    ],
     "padding-line-between-statements": 1,
     "prefer-arrow-callback": 1,
     "prefer-const": 1,
-    "prefer-destructuring": [1, {"object":  true, "array":  false}],
+    "prefer-destructuring": [
+      1,
+      {
+        "array": false,
+        "object": true
+      }
+    ],
     "prefer-numeric-literals": 1,
     "prefer-promise-reject-errors": 2,
-    "promise/param-names": 1,
     "prefer-rest-params": 1,
     "prefer-spread": 1,
     "prefer-template": 1,
+    "promise/param-names": 1,
     "quote-props": [
       1,
       "consistent-as-needed"
@@ -403,6 +428,7 @@
         "avoidEscape": true
       }
     ],
+    "radix": 0,
     "require-await": 2,
     "require-jsdoc": 1,
     "require-yield": 1,
@@ -410,7 +436,7 @@
       2,
       "never"
     ],
-    "padded-blocks": [1, {"classes":  "never", "switches":  "never"}],
+    "security/detect-object-injection": 0,
     "semi-spacing": [
       2,
       {
@@ -470,13 +496,13 @@
         "preferType": {
           "Boolean": "boolean",
           "Number": "number",
-          "set": "Set",
-          "map": "Map",
-          "date": "Date",
-          "array": "Array",
-          "String": "string",
           "Object": "Record<string,*>",
-          "object": "Record<string,*>"
+          "String": "string",
+          "array": "Array",
+          "date": "Date",
+          "map": "Map",
+          "object": "Record<string,*>",
+          "set": "Set"
         },
         "requireParamDescription": false,
         "requireReturn": false,
@@ -505,4 +531,3 @@
     ]
   }
 }
-
