--- a/package.json
+++ b/package.json
@@ -94,14 +94,22 @@
     ]
   },
   "scripts": {
+    "example:1": "node examples/jobsite.js",
+    "example:2": "node examples/gh.js",
     "test": "npx jest",
-    "doc": "echo -e 'GENERATING DOCS\\n' && rm -rf ./docs && npx jsdoc -d ./docs -R ./README.md ./*.js ./exporting/*.js",
-    "doc:publish": "echo -e 'PUBLISHING DOCS\\n' && npm run doc && git add ./docs && git commit -am 'Update docs' -n && git push",
+    "doc": "echo -e 'GENERATING DOCS\\n' && rm -rf ./docs && npx jsdoc --pedantic -d ./docs -R ./README.md ./*.js",
     "doc:open": "npm run doc && $BROWSER ./docs/index.html",
+    "doc:publish": "echo -e 'PUBLISHING DOCS\\n' && npm run doc && git add ./docs && git commit -am 'Update docs' -n && git push",
+    "lint": "npm run lint:code && npm run lint:doc && npm run lint:deps",
+    "lint:code": "npx eslint *.js",
+    "lint:doc": "npm run lint:doc:markdown-lint && npm run lint:doc:write-good && npm run lint:doc:remark",
+    "lint:doc:write-good": "npx write-good --so --weasel --tooWordy --cliches --thereIs *.md || echo ''",
+    "lint:doc:markdown-lint": "npx markdownlint *.md",
+    "lint:doc:remark": "npx remark -u lint *.md",
+    "lint:deps": "npm run lint:deps:license && npm run lint:deps:security",
+    "lint:deps:security": "npx retire --js",
+    "lint:deps:license": "npx license-checker --summary",
     "loc": "tokei -- $(git ls-files | grep -v docs | grep -v bin)",
-    "lint": "npx eslint *.js",
-    "prepublishOnly": "npm run doc:publish",
-    "example": "node examples/jobsite.js",
-    "example-2": "node examples/gh.js"
+    "prepublishOnly": "npm run doc:publish"
   }
 }
