--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     "test": "npx jest",
     "doc": "echo -e 'GENERATING DOCS\\n' && rm -rf ./docs && npx jsdoc --pedantic -d ./docs -R ./README.md ./*.js",
     "doc:open": "npm run doc && $BROWSER ./docs/index.html",
-    "doc:publish": "echo -e 'PUBLISHING DOCS\\n' && npm run doc && git add ./docs && git commit -am 'Update docs' -n && git push",
+    "doc:publish": "bash -c \"echo -e 'PUBLISHING DOCS\\n' && npm run doc && git add -f ./docs && git commit -am 'Update docs' -n && git push\"",
     "lint": "npm run lint:code && npm run lint:doc && npm run lint:deps",
     "lint:code": "npx eslint *.js",
     "lint:doc": "npm run lint:doc:markdown-lint && npm run lint:doc:write-good && npm run lint:doc:remark",
