--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     }
   ],
   "engines": {
-    "node": ">=10.15.1"
+    "node": ">=10.15.1",
+    "npm": ">= 6.4.1"
   },
   "engineStrict": true,
   "browserslist": [],
